docs: ✏️ adding License and Readme file

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 REDIS_PORT=
 REDIS_PASSWORD=
 
+# PostgreSQL configuration
+POSTGRESQL_USER=
+POSTGRESQL_PASSWORD=
+POSTGRESQL_DATABASE=
+
 # Mysql configuration
-MYSQL_PORT=
+MYSQL_USER=
+MYSQL_DATABASE=
 MYSQL_PASSWORD=
